--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,22 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <%= link_to 'Jędrula.exe', root_path, class: 'navbar-brand' %>
+        </div>
+        <ul class="nav navbar-nav">
+          <% unless current_user %>
+            <li><%= link_to 'Register', new_user_registration_path %></li>
+            <li><%= link_to 'Log in', new_user_session_path %></li>
+          <% else %>
+            <li>Logged as: <%= current_user.email %></li>
+            <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
