--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,10 @@
             <li><%= link_to 'Register', new_user_registration_path %></li>
             <li><%= link_to 'Log in', new_user_session_path %></li>
           <% else %>
-            <li>Logged as: <%= current_user.email %></li>
+            <% if current_user.developer %>
+              <li><%= link_to 'Developer', root_path %></li>
+            <% end %>
+            <li><a href="#">Logged as: <%= current_user.email %></a></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
           <% end %>
         </ul>
