--- a/app/views/developer/partials/_hero_roles.slim
+++ b/app/views/developer/partials/_hero_roles.slim
@@ -8,5 +8,5 @@ table.table.table-striped
       tr
         td= role.name
         td
-          .btn.btn-default Edit
-          .btn.btn-default Delete
+          = link_to 'Edit', edit_hero_role_path(role), class: 'btn btn-default'
+          = link_to 'Delete', role, class: 'btn btn-danger', method: :delete
