--- a/app/views/developer/partials/_worlds.slim
+++ b/app/views/developer/partials/_worlds.slim
@@ -2,11 +2,17 @@ table.table.table-striped
   thead
     tr
       th Name
+      th Width
+      th Height
+      th Elements loaded
       th Actions
   tbody
     - @presenter.worlds.each do |world|
       tr
         td= world.name
+        td= world.width
+        td= world.height
+        td= world.environments.count
         td
           = link_to 'Edit', edit_world_path(world), class: 'btn btn-default'
           = link_to 'Delete', world, class: 'btn btn-danger', method: :delete
