--- a/app/views/worlds/_form.slim
+++ b/app/views/worlds/_form.slim
@@ -4,4 +4,10 @@
     .form-group
       = f.label :name
       = f.text_field :name, class: 'form-control'
+    .form-group
+      = f.label :width
+      = f.text_field :width, class: 'form-control'
+    .form-group
+      = f.label :height
+      = f.text_field :height, class: 'form-control'
     = f.submit
