--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <li><%= link_to 'Log in', new_user_session_path %></li>
           <% else %>
             <% if current_user.developer %>
-              <li><%= link_to 'Developer', root_path %></li>
+              <li><%= link_to 'Developer', developer_index_path %></li>
             <% end %>
             <li><a href="#">Logged as: <%= current_user.email %></a></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
