Working world edit

--- a/app/views/world_editor/partials/_world_environment.slim
+++ b/app/views/world_editor/partials/_world_environment.slim
@@ -1,1 +1,2 @@
-.env style="left: #{environment.position_x}px; top: #{environment.position_y}px;"
+.env style="left: #{environment.position_x}px; top: #{environment.position_y + 86 + 32}px;"
+  = image_tag environment.environment.image.url(:normal)
