--- a/app/views/worlds/_form.slim
+++ b/app/views/worlds/_form.slim
@@ -2,6 +2,9 @@
   h1 New world
   = form_for @world do |f|
     .form-group
+      = f.label :background
+      = f.file_field :background, class: 'form-control'
+    .form-group
       = f.label :name
       = f.text_field :name, class: 'form-control'
     .form-group
