--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <% if current_user.developer %>
               <li><%= link_to 'Developer', developer_index_path %></li>
             <% end %>
-            <li><a href="#">Logged as: <%= current_user.email %></a></li>
+            <li><%= link_to current_user.email, lobby_index_path %></a></li>
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
           <% end %>
         </ul>
