--- a/app/views/hero_roles/_form.slim
+++ b/app/views/hero_roles/_form.slim
@@ -2,6 +2,9 @@
   h1 New hero_role
   = form_for @hero_role do |f|
     .form-group
+      = f.label :template
+      = f.file_field :template
+    .form-group
       = f.label :name
       = f.text_field :name, class: 'form-control'
     = f.submit
