--- a/app/views/game/partials/_world_environment.slim
+++ b/app/views/game/partials/_world_environment.slim
@@ -1,2 +1,2 @@
 .env style="left: #{environment.position_x}px; top: #{environment.position_y}px;"
-  = image_tag environment.environment.image.url(:normal)
+  = image_tag environment.image.url(:normal)
