--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -6,11 +6,33 @@ body {
   position: fixed;
 }
 
-.game-world .env{
+.game-world .env,
+.game-world .teleport{
   position: absolute;
   z-index: 100;
   width: 32px;
   height: 32px;
+}
+
+.game-world .info{
+  width: auto;
+  height: auto;
+  left: -170%;
+  top: -140%;
+  width: 150px;
+  border-radius: 3px;
+  border: 1px solid #888;
+  text-align: center;
+  padding: 4%;
+  position: absolute;
+  z-index: 151;
+  background-color: #ccc;
+  opacity: 0;
+  transition-duration: 0.3s;
+}
+
+.game-world .teleport:hover .info{
+  opacity: 1;
 }
 
 .env-items-bar{
