--- a/app/views/items/_form.slim
+++ b/app/views/items/_form.slim
@@ -2,6 +2,9 @@
   h1 New item
   = form_for @item do |f|
     .form-group
+      = f.label :image
+      = f.file_field :image
+    .form-group
       = f.label :name
       = f.text_field :name, class: 'form-control'
     .form-group
