--- a/app/views/game/index.slim
+++ b/app/views/game/index.slim
@@ -2,8 +2,27 @@
   = javascript_include_tag 'game'
 
 .eq-modal
-  - @presenter.playing_hero.items.each do |item|
-    = item.name
+  .info
+    h2 Character info
+    p Name: #{@presenter.playing_hero.name}
+    p Role: #{@presenter.playing_hero.hero_role.name}
+    p Strength: #{@presenter.playing_hero.strength}
+    p Agility: #{@presenter.playing_hero.agility}
+    p Inteligence: #{@presenter.playing_hero.inteligence}
+  .hero
+    .head
+      .empty-slot
+    .body
+      .empty-slot
+      .empty-slot
+      .empty-slot
+    .pants
+      .empty-slot
+    .legs
+      .empty-slot
+  div style="clear: both;"
+  .bag
+
 .game-world data-world-id="#{@presenter.world.id}" style="width: #{@presenter.world.width}px; height: #{@presenter.world.height}px; background-image: url(#{@presenter.world.background.url});"
   .environments
     - @presenter.world_objects.each do |environment|
