--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -2,6 +2,79 @@ body {
   padding: 0;
 }
 
+.eq-modal{
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 150;
+  background-color: rgba(25,25,25,0.7);
+  color: white;
+  box-sizing: border-box;
+  padding: 2%;
+}
+
+.eq-modal .info, .eq-modal .hero{
+  padding: 2%;
+  width: 48%;
+  float: left;
+  margin: 0 1%;
+  box-sizing: border-box;
+  text-align: center;
+  background-color: #242424;
+  box-sizing: border-box;
+  border: 2px solid #c0c0c0;
+  box-shadow: 0px 0px 113px rgba(0, 0, 0, 0.7) inset;
+}
+  .eq-modal .info img{
+    width: 150px;
+    height: 150px;
+    display: inline-block;
+    object-fit: cover;
+  }
+
+  .eq-modal .bag{
+    padding: 2%;
+    box-sizing: border-box;
+    text-align: center;
+  }
+
+  .eq-modal .slot, .eq-modal .empty-slot{
+    width: 75px;
+    height: 75px;
+    display: inline-block;
+    background-color: #242424;
+    box-sizing: border-box;
+    border: 2px solid black;
+    margin: 2px;
+    transition-duration: 0.2s;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5) inset;
+  }
+    .eq-modal .slot{
+      cursor: pointer;
+    }
+
+    .eq-modal .locked{
+      background-color: rgba(255, 0, 0, 0.3);
+    }
+
+    .eq-modal .slot:hover{
+      background-color: #cdcdcd;
+    }
+
+  .eq-modal .slot .item-info{
+    display: none;
+  }
+
+.eq-modal .slot img{
+  padding: 1;
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 100%;
+
+}
+
 .game-world {
   position: fixed;
 }
