--- a/app/views/game/partials/_player.slim
+++ b/app/views/game/partials/_player.slim
@@ -1,2 +1,2 @@
-.player data-id="#{player.id}" style="left: #{player.position_x}px; top: #{player.position_y}px" id="#{'current_user' if @presenter.playing_hero.id == player.id}"
+.player data-id="#{player.id}" style="left: #{player.position_x}px; top: #{player.position_y}px" id="#{'current_user' if @presenter.playing_hero.id == player.id}" data-hero-class="#{player.hero_role.name}"
   = image_tag player.hero_role.template.url(:normal)
